Added vault, prepared cron tasks

--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,9 +1,9 @@
+---
 # Install Git
 
-# 
 
-#
 
 # Setup cron jobs
 # - CPU temperature - https://github.com/mastabojo/home-control/wiki/Tips#check-raspberry-pi-cpu-temperature
 
+### Run the Python main loop (see rc.local)
