--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,9 +1,20 @@
 ---
-# Install Git
 
+# Change default password for user pi
+# https://www.raspberrypi.org/documentation/configuration/security.md
+
+
+# Create admin user
+# https://www.raspberrypi.org/documentation/configuration/security.md
+
+
+# Make sudo require a password
+# https://www.raspberrypi.org/documentation/configuration/security.md
 
 
 # Setup cron jobs
 # - CPU temperature - https://github.com/mastabojo/home-control/wiki/Tips#check-raspberry-pi-cpu-temperature
 
 ### Run the Python main loop (see rc.local)
+
+
