--- a/roles/ufw/tasks/main.yml
+++ b/roles/ufw/tasks/main.yml
@@ -2,3 +2,13 @@
 
 # Install UFW
 # https://www.raspberrypi.org/documentation/configuration/security.md
+
+# Instructions
+# https://pimylifeup.com/raspberry-pi-ufw/
+#
+# sudo apt install ufw
+# sudo ufw allow 22
+# sudo ufw allow 80
+# sudo ufw allow 443
+# sudo ufw allow ...
+# sudo ufw enable
