--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -1,5 +1,39 @@
 ---
 
-# Setup Apache + modules
+- name: Install Apache
+  apt: 
+    name: apache2
+    update_cache: yes
+    state: latest
 
-# sudo apt install apache2
+- name: Set site conf file
+  template:
+    src: "hcc2.conf.j2"
+    dest: "/etc/apache2/sites-available/{{ app_rname }}.conf"
+  tags: apache
+
+- name: Enable site
+  file:
+    src: "/etc/apache2/sites-available/{{ app_name }}.conf"
+    dest: "/etc/apache2/sites-enabled/{{ app_name }}.conf"
+    state: link
+  notify: Reload Apache
+  tags: apache
+
+- name: Remove "default" sites
+  file:
+    path: "/etc/apache2/sites-enabled/{{ item }}"
+    state: absent
+  with_items:
+    - 000-default.conf
+    - default-ssl.conf
+  notify: Reload Apache
+  tags: apache
+
+# UFW Configuration
+- name: "UFW - Allow HTTP on port 80"
+  ufw:
+    rule: allow
+    port: "80"
+    proto: tcp
+  tags: apache
