--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
 
 # Install Git
+#
+# sudo apt install git
+# git config --global user.name "Your Name"
+# git config --global user.email "youremail@yourdomain.com"
