--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -5,26 +5,29 @@
   ansible.builtin.user:
     name: pi
     update_password: always
-    password: "{{ ansible_user_pass|password_hash('sha512') }}"
+    password: "{{ ansible_user_pass | password_hash('sha512') }}"
 
 # Make sudo require a password (effectively deleting *_pi_nopasswd files from /etc/sudoers.d/)
-- name: 
+# - name: Prevent user pi from using sudo without password
+#   ansible.builtin.file:
+#     path: "{{ item }}"
+#     state: absent
+#   with_fileglob:
+#     - "/etc/sudoers.d/010_pi-nopasswd"
+#     - "/etc/sudoers.d/*_pi-nopasswd"
+- name: Prevent user pi from using sudo without password
   ansible.builtin.file:
-    path: {{ item }}
+    path: "etc/sudoers.d/010_pi-nopasswd"
     state: absent
-    with_fileglob:
-      - "/etc/sudoers.d/*_pi_nopasswd"
 
 # Create admin user
-- name: Creating user admin with admin access
-  ansible.builtin.user: 
-    name: admin
-    password: "{{ ansible_user_pass|password_hash('sha512') }}"
-    update_password: on_create
-    groups: adm, sudo, gpio
-    append: yes
+# - name: Creating user admin with admin access
+#   ansible.builtin.user: 
+#     name: admin
+#     password: "{{ ansible_user_pass | password_hash('sha512') }}"
+#     update_password: on_create
+#     groups: adm, sudo, gpio
+#     append: yes
 
 # Instal Pip
 # sudo apt install python3-pip
-
-### Run the Python main loop (see rc.local)
